--- a/style.css
+++ b/style.css
@@ -24,29 +24,39 @@ div#boards {
   padding: 20px;
 }
 
-.board {
-  display: grid;
-  grid-template-columns: repeat(10, 30px);
-  grid-template-rows: repeat(10, 30px);
-  gap: 2px;
+.board table {
+  border-collapse: collapse;
+  margin: auto;
   background-color: #0077be;
-  padding: 10px;
   border-radius: 8px;
+  overflow: hidden;
 }
 
-.board div.cell {
+.board th {
   width: 30px;
   height: 30px;
-  background-color: #aad3df;
-  border: 1px solid #333;
-  box-sizing: border-box;
-  cursor: pointer;
+  text-align: center;
+  font-weight: bold;
+  color: #000;
+  background-color: #0077be;
 }
 
-.board div.cell.hit {
+.board td.cell {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #333;
+  box-sizing: border-box;
+  background-color: #aad3df;
+  cursor: pointer;
+  text-align: center;
+  vertical-align: middle;
+  padding: 0;
+}
+
+.board td.cell.hit {
   background-color: #f00;
 }
 
-.board div.cell.miss {
+.board td.cell.miss {
   background-color: #fff;
 }
