--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ div#boards {
   height: 30px;
   text-align: center;
   font-weight: bold;
-  color: #fff;
+  color: #fff;               /* Zahlen und Buchstaben in Weiß */
   background-color: #0077be;
 }
 
